--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a id="link-url-5" href="http://zlxz.uupan.net/login.aspx?d=zlxz/" target="_blank">
+                                        <a id="link-url-5" href="http://zlxz.uupan.net/login.aspx?d=zlxz" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-5" class="fa-solid fa-cloud"></i>
                                                 <span class="link-name" id="link-name-5">LOL网盘 密码8888</span>
