--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                 <!--第二组-->
                                 <div class="row" style="margin-top: 1.5rem;">
                                     <div class="col">
-                                        <a id="link-url-4" href="http://6666.ghaw.niovo.cn" target="_blank">
+                                        <a id="link-url-4" href="6666.sdajk123.niovo.cn" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-4" class="fa-solid fa-blog"></i>
                                                 <span class="link-name" id="link-name-4">LOL 货源站</span>
